ai/level1/manifest/deploy-model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: digit-finder-model
  name: digit-finder-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digit-finder-model
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: digit-finder-model
    spec:
      containers:
        - image: rg.nl-ams.scw.cloud/breakathon-xebia4ever/ai/digit-finder-model
          name: model
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: registry-secret
