ai/level1/manifest/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: digit-finder
  name: digit-finder
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: digit-finder
status:
  loadBalancer: {}
