ai/level1/manifest/svc-model.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: digit-finder-model
  name: digit-finder-model
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: digit-finder-model
status:
  loadBalancer: {}
