ai/level1/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: digit.ai.breakathon.dev
    external-dns.alpha.kubernetes.io/ttl: "60"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "digit.ai.breakathon.dev"
    secretName: tls-cert-ai-digit
  rules:
    - host: digit.ai.breakathon.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: digit-finder
                port:
                  number: 80
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: digit-finder-model
                port:
                  number: 5000
